--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 <!DOCTYPE html><html lang=ru><meta charset=UTF-8><title>Tanchiki 3D</title><meta name=viewport content="width=device-width, initial-scale=1.0"><style>html,body{width:100%;height:100%;margin:0;padding:0;font-family:Arial,sans-serif;overflow:hidden}#game-canvas{width:100vw;height:100vh;display:block}</style><body>
   <canvas id=game-canvas></canvas>
-  <script src=/public.321f02b3.js type=module></script>
-
-
+  <script src=public.321f02b3.js type=module></script>
